Widened editButton for Song Note on Practice page to rectify text align issue.

--- a/src/main/resources/static/css/css.css
+++ b/src/main/resources/static/css/css.css
@@ -1357,6 +1357,10 @@ th {
             margin-bottom: 6px;
         }
 
+        .practice #editButton {
+            width: 85px;
+        }
+
         .practice .editChordPageText {
             font-size: 13px;
         }
